disabled shutting down after docker compose build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 heroku.thymeleaf.enforceHttps=true
 
-docker-compose.build=if-missing
-docker-compose.build.target=src/docker-compose.yml
+#docker-compose.build=if-missing
+#docker-compose.build.target=src/docker-compose.yml
