--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,25 @@
     <java.version>1.8</java.version>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>maven-snapshots</id>
+      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+      <layout>default</layout>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>io.github.createam-labs</groupId>
       <artifactId>spring-boot-starter-heroku</artifactId>
-      <version>0.1.2</version>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
