--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-heroku.enforceHttps=true
+#ngrok.enabled=true
+#ngrok.directory=C:\\Users\\user\\Desktop\\ngrok
 
-#docker-compose.build=if-missing
-#docker-compose.build.target=src/docker-compose.yml
+#spring.resources.add-mappings=false
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.http.encoding.force=true
