--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
 
 	<dependencies>
 
-		<dependency>
-			<groupId>io.github.createam-labs</groupId>
-			<artifactId>ngrok-spring-boot-starter</artifactId>
-			<version>0.1</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.github.createam-labs</groupId>-->
+<!--			<artifactId>ngrok-spring-boot-starter</artifactId>-->
+<!--			<version>0.1</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
