--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,11 @@
 	</properties>
 
 	<dependencies>
-
-<!--		<dependency>-->
-<!--			<groupId>io.github.createam-labs</groupId>-->
-<!--			<artifactId>ngrok-spring-boot-starter</artifactId>-->
-<!--			<version>0.1</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>io.github.createam-labs</groupId>
+			<artifactId>spring-boot-starter-heroku</artifactId>
+			<version>1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
