--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,23 @@
 heroku.enforceHttps=true
 
+spring.liquibase.change-log=classpath:liquibase/db.xml
+
+#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+#spring.datasource.url=jdbc:h2:test;DB_CLOSE_DELAY=-1
+#spring.datasource.url=jdbc:h2:mem:~/test;DB_CLOSE_DELAY=-1
+
+spring.datasource.url=jdbc:h2:mem:in-memory-db;DB_CLOSE_ON_EXIT=FALSE
+
+
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=${H2_PASSWORD}
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+
 #ngrok.enabled=true
 #ngrok.directory=C:\\Users\\user\\Desktop\\ngrok
 
