--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.liquibase.change-log=classpath:liquibase/db.xml
 
 spring.datasource.url=jdbc:h2:mem:in-memory-db;DB_CLOSE_ON_EXIT=FALSE
 
-
+spring.h2.console.settings.web-allow-others=true
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
